Implement order checkout flow and ticket validation